lab3: working on cognito user pool for employees

--- a/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
@@ -420,6 +420,7 @@ Resources:
       - !Ref PublicVpcWebServerElbv2SecurityGroup
       Type: "application"
 
+  # TODO In future labs, this must be in it's own template in order to create a Cognito user pool with a custom domain
   WebServerAcmCertificate:
     Type: AWS::CertificateManager::Certificate
     Properties: 
