lab3: working on cognito user pool for employees

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -370,6 +370,10 @@ Resources:
           - "sqs:GetQueueAttributes"
           - "sqs:ChangeMessageVisibility"
           Resource: !GetAtt GitHubSyncRequestQueue.Arn
+        - Effect: "Allow"
+          Action:
+          - "cloudformation:ListExports"
+          Resource: "*"
       PolicyName: "GitHubSyncServerSsmPolicy"
       Roles:
       - !Ref GitHubSyncServerRootRole
