lab3: [#5] Added ALB Security Group Rule to reach Cognito

--- a/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
@@ -383,10 +383,17 @@ Resources:
         IpProtocol: tcp
         FromPort: 8080
         ToPort: 8080
+        Description: "Web Server Access - Public Site"
       - DestinationSecurityGroupId: !Ref WebServerSecurityGroup
         IpProtocol: tcp
         FromPort: 8081
         ToPort: 8081
+        Description: "Web Server Access - Internal/Intranet Site"
+      - CidrIp: "0.0.0.0/0"
+        IpProtocol: tcp
+        FromPort: 443
+        ToPort: 443
+        Description: "Required for ALB to reach Cognito End-Points"
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 443
