lab3: [#5] Added one more condition for the authenticated requests to the internal site to insure the correct host header is included

--- a/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5100_web_server.yaml
@@ -531,6 +531,12 @@ Resources:
           - TargetGroupArn: !Ref PublicVpcWebServer8081Elbv2TargetGroup
         Type: "forward"
       Conditions: 
+      - Field: "host-header"
+        HostHeaderConfig: 
+          Values: 
+          - Fn::Sub:
+            - "internal.${DomainName}"
+            - DomainName: !Ref PublicDnsNameParam
       - Field: "path-pattern"
         PathPatternConfig: 
           Values: 
