--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "untarred",
         "usermod",
         "userpool",
+        "WEBAPI",
         "WORKDIR",
         "zcat",
         "zfill",
