lab3: #17 Integrated authorizer to API Route

--- a/labs/lab3-non-kinesis-example/cloudformation/5200_web_site_api_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5200_web_site_api_resources.yaml
@@ -178,6 +178,10 @@ Resources:
     Properties: 
       ApiId: !Ref InternalWebAppApiGateway
       ApiKeyRequired: false
+      # AuthorizationScopes: 
+      # - String
+      AuthorizationType: "JWT"
+      AuthorizerId: !Ref InternalWebAppApiGatewayAuthorizer
       OperationName: "test-public-event-operation"
       RouteKey: "GET /access-card-app/employees"
       Target: 
