lab3: various updates to get authorization on the API working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "crossmnt",
         "dfcb",
         "dfdc",
+        "distro",
         "DNSNAME",
         "eaefed",
         "ecfdcb",
@@ -35,6 +36,7 @@
         "onboarded",
         "OPENZFS",
         "patchmanager",
+        "PCAP",
         "prepopulate",
         "Redrive",
         "RFID",
@@ -42,6 +44,7 @@
         "Snyk",
         "strugling",
         "syncserver",
+        "tcpdump",
         "Tierings",
         "traceback",
         "untar",
@@ -49,6 +52,7 @@
         "usermod",
         "userpool",
         "WEBAPI",
+        "wireshark",
         "WORKDIR",
         "zcat",
         "zfill",
