lab3: #21 Updated DynamoDB CloudFormation Stack

--- a/labs/lab3-non-kinesis-example/cloudformation/1000_dynamodb.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1000_dynamodb.yaml
@@ -43,67 +43,67 @@ Resources:
           KeyType: RANGE
         Projection: 
           ProjectionType: "ALL"
-      BillingMode: PROVISIONED
+      BillingMode: "PAY_PER_REQUEST"
       TableName: "lab3-access-card-app"
-      ProvisionedThroughput:
-        ReadCapacityUnits: 1
-        WriteCapacityUnits: 1
+      # ProvisionedThroughput:
+      #   ReadCapacityUnits: 1
+      #   WriteCapacityUnits: 1
 
-  TableAccessCardAppReadCapacityScalableTarget:
-    Type: AWS::ApplicationAutoScaling::ScalableTarget
-    DependsOn: AccessCardApp
-    Properties:
-      ServiceNamespace: dynamodb
-      ResourceId: table/access-card-app
-      ScalableDimension: dynamodb:table:ReadCapacityUnits
-      MinCapacity: 1
-      MaxCapacity: 10
-      RoleARN:
-        Fn::Sub: arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/dynamodb.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_DynamoDBTable
+  # TableAccessCardAppReadCapacityScalableTarget:
+  #   Type: AWS::ApplicationAutoScaling::ScalableTarget
+  #   DependsOn: AccessCardApp
+  #   Properties:
+  #     ServiceNamespace: dynamodb
+  #     ResourceId: table/access-card-app
+  #     ScalableDimension: dynamodb:table:ReadCapacityUnits
+  #     MinCapacity: 1
+  #     MaxCapacity: 10
+  #     RoleARN:
+  #       Fn::Sub: arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/dynamodb.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_DynamoDBTable
 
-  TableAccessCardAppReadCapacityScalingPolicy:
-    Type: AWS::ApplicationAutoScaling::ScalingPolicy
-    DependsOn: TableAccessCardAppReadCapacityScalableTarget
-    Properties:
-      ServiceNamespace: dynamodb
-      ResourceId: table/access-card-app
-      ScalableDimension: dynamodb:table:ReadCapacityUnits
-      PolicyName: access-card-app-read-capacity-scaling-policy
-      PolicyType: TargetTrackingScaling
-      TargetTrackingScalingPolicyConfiguration:
-        PredefinedMetricSpecification:
-          PredefinedMetricType: DynamoDBReadCapacityUtilization
-        ScaleOutCooldown: 60
-        ScaleInCooldown: 60
-        TargetValue: 70
+  # TableAccessCardAppReadCapacityScalingPolicy:
+  #   Type: AWS::ApplicationAutoScaling::ScalingPolicy
+  #   DependsOn: TableAccessCardAppReadCapacityScalableTarget
+  #   Properties:
+  #     ServiceNamespace: dynamodb
+  #     ResourceId: table/access-card-app
+  #     ScalableDimension: dynamodb:table:ReadCapacityUnits
+  #     PolicyName: access-card-app-read-capacity-scaling-policy
+  #     PolicyType: TargetTrackingScaling
+  #     TargetTrackingScalingPolicyConfiguration:
+  #       PredefinedMetricSpecification:
+  #         PredefinedMetricType: DynamoDBReadCapacityUtilization
+  #       ScaleOutCooldown: 60
+  #       ScaleInCooldown: 60
+  #       TargetValue: 70
 
-  TableAccessCardAppWriteCapacityScalableTarget:
-    Type: AWS::ApplicationAutoScaling::ScalableTarget
-    DependsOn: AccessCardApp
-    Properties:
-      ServiceNamespace: dynamodb
-      ResourceId: table/access-card-app
-      ScalableDimension: dynamodb:table:WriteCapacityUnits
-      MinCapacity: 1
-      MaxCapacity: 10
-      RoleARN:
-        Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/aws-service-role/dynamodb.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_DynamoDBTable
+  # TableAccessCardAppWriteCapacityScalableTarget:
+  #   Type: AWS::ApplicationAutoScaling::ScalableTarget
+  #   DependsOn: AccessCardApp
+  #   Properties:
+  #     ServiceNamespace: dynamodb
+  #     ResourceId: table/access-card-app
+  #     ScalableDimension: dynamodb:table:WriteCapacityUnits
+  #     MinCapacity: 1
+  #     MaxCapacity: 10
+  #     RoleARN:
+  #       Fn::Sub: arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/dynamodb.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_DynamoDBTable
 
-  TableAccessCardAppWriteCapacityScalingPolicy:
-    Type: AWS::ApplicationAutoScaling::ScalingPolicy
-    DependsOn: TableAccessCardAppReadCapacityScalableTarget
-    Properties:
-      ServiceNamespace: dynamodb
-      ResourceId: table/access-card-app
-      ScalableDimension: dynamodb:table:WriteCapacityUnits
-      PolicyName: access-card-app-write-capacity-scaling-policy
-      PolicyType: TargetTrackingScaling
-      TargetTrackingScalingPolicyConfiguration:
-        PredefinedMetricSpecification:
-          PredefinedMetricType: DynamoDBWriteCapacityUtilization
-        ScaleOutCooldown: 60
-        ScaleInCooldown: 60
-        TargetValue: 70
+  # TableAccessCardAppWriteCapacityScalingPolicy:
+  #   Type: AWS::ApplicationAutoScaling::ScalingPolicy
+  #   DependsOn: TableAccessCardAppReadCapacityScalableTarget
+  #   Properties:
+  #     ServiceNamespace: dynamodb
+  #     ResourceId: table/access-card-app
+  #     ScalableDimension: dynamodb:table:WriteCapacityUnits
+  #     PolicyName: access-card-app-write-capacity-scaling-policy
+  #     PolicyType: TargetTrackingScaling
+  #     TargetTrackingScalingPolicyConfiguration:
+  #       PredefinedMetricSpecification:
+  #         PredefinedMetricType: DynamoDBWriteCapacityUtilization
+  #       ScaleOutCooldown: 60
+  #       ScaleInCooldown: 60
+  #       TargetValue: 70
 
 Outputs:
 
